@@ -5,7 +5,7 @@
 
 /*
  * Harbour lex rules.
- * Build 21: Spring 99
+ * Build 27: Summer 99
  * Usage: flex -i -8 -oyylex.c harbour.l
  * You may find flex.exe at www.harbour-project.org
 */
