@@ -5,12 +5,12 @@
 
 /*
  * Harbour compiler (yacc rules and actions)
- * Build 26 proposal: spring 1999
+ * Build 27 summer 1999
  * Usage: bison -d -v harbour.y
  * You may find Bison at www.harbour.project.org
  */
 
-#define BUILD         26    /* current harbour.y build */
+#define BUILD         27    /* current harbour.y build */
 
 #include <stdio.h>
 #include <stdlib.h>
