@@ -1,3 +1,6 @@
+19990619-09:49 CET Patrick Mast
+  * Updated build numbers
+
 19990619-09:40 CET Patrick Mast
   * tests\working\hscript\hscript.prg
     removed line 150
